# llm-knowledge-base-template

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.claude/: settings.example.json  settings.windows.example.json
.codex/: hooks.example.json  hooks.windows.example.json
docs/adr/: 0001-provider-neutral-capture-and-agent-backends.md  0002-user-session-tray-app-over-system-service.md  0003-pyside6-qt-desktop-ui.md  0004-manual-memory-through-daily-logs.md  0005-persistent-job-queue-for-long-running-actions.md  0006-first-run-setup-wizard.md  0007-separate-kb-data-from-app-data.md  0008-linux-mainstream-glibc-packaging-policy.md  (+10 more)
hooks/: pre-compact.py  session-end.py  session-start.py
kb_app/: __init__.py  __main__.py
kb_mcp/: __init__.py  __main__.py  server.py
scripts/: agent_backend.py  build-linux.sh  build-windows.ps1  com.user.kb-daily-compile.plist.example  compile-daily.ps1  compile-daily.sh  compile.py  config.py  flush.py  lint.py  query.py  register-windows-task.ps1  smoke-packaged.py  transcripts.py
tests/: test_agent_backend.py  test_agent_service.py  test_cli.py  test_config_merge.py  test_cost_labels.py  test_diagnostics.py  test_full_flow.py  test_hook_builder.py  test_hook_commands.py  test_jobs_queue.py  test_jobs_runner.py  test_jobs_runner_integrations.py  test_kb_bootstrap.py  test_mcp_setup.py  test_mcp_ui_actions.py  test_operations.py  test_packaging_files.py  test_paths.py  test_profiles.py  test_script_wrappers.py  test_transcripts.py  test_ui_imports.py  test_ui_model.py  test_ui_smoke.py  test_wiki.py
(+36 files in other folders)
