[project]
name = "llm-knowledge-base"
version = "0.1.0"
description = "Personal knowledge base compiled from AI coding sessions - inspired by Karpathy's LLM KB architecture"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "pyside6>=6.11.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
